# gcPanel-Streamlit

./: .env  .env.production  .env.template  .replit  AUTHENTICATION_DEPLOYMENT_GUIDE.md  CODEBASE_CLEANUP_SUMMARY.md  CRUD_IMPLEMENTATION_PLAN.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_ROADMAP.md  Dockerfile  IMPLEMENTATION_PLAN.md  QUICK_START_GUIDE.md  README.md  add_auth_checks.py  add_auth_to_pages.py  app.py  app_clean.py  app_clean_modular.py  app_config.py  app_enterprise.py  app_fixed.py  app_manager.py  app_manager.py.backup  app_manager.py.new  app_modular.py  app_original.py  app_production.py  app_sidebar.py  app_simple.py  app_working.py  docker-compose.yml  download_aia_numbering.py  download_csi_masterformat.py  download_estimating_lecture.py  download_ibc_code_reference.py  download_meeting_agenda.py  download_project_delivery_methods.py  download_safety_lectures.py  download_sample_plans.py  download_schedule_of_values.py  (+39 more)
.streamlit/: config.toml
archive_authentication/: app_state.py  auth.py  auth_enterprise.py  user_management.py
archive_dashboards/: README.md  app_manager.py  gcpanel_core_focused.py  highland_production_app.py
assets/: clean_modern_styles.py  complete_dark_theme.py  construction_dashboard_js.py  container_styles.py  crud_styler.py  crud_styles.css  custom.css  dark_theme_styles.py  enhanced_construction_ui.py  enhanced_ui.py  header_fix.py  improved_layout.css  remove_header_buttons.css  safety_styles.py  styles.py
attached_assets/: AIA-G702-G703-Template-SUBS-ONLY-4-4-23.xlsx  gcpanel-downloadable-icons.tsx  (+28 more)
components/: auth.py  (+31 more)
(+530 files in other folders)
